# GGGVDiagrams

./: .gitignore  README.md  main_gggv_generation.py  plot_comparison.py  requirements.txt
params/: gggv_default.toml  sim_default.toml  veh_default.toml
src/: PID.py  __init__.py  data_handling.py  directories.py  sim_handling.py
src/graphics/: block_diagram.drawio
src/param_manager_py/: CMakeLists.txt  package.xml
src/param_manager_py/src/param_manager_py/: _cpp_binding.cpp
src/tum_sim_types_py/: package.xml
src/tum_sim_types_py/src/tum_sim_types_py/: _cpp_binding.cpp
src/tum_sim_types_py/tum_sim_types_py/: __init__.py
src/tum_types_py/: CMakeLists.txt
src/tum_types_py/src/tum_types_py/: _common_binding.cpp  _control_binding.cpp
src/tum_types_py/tum_types_py/: __init__.py
src/tum_types_py/tum_types_py/control/: __init__.py
src/vehicle_model_gggv_sim_validation_cpp/: CMakeLists.txt  package.xml
src/vehicle_model_gggv_sim_validation_cpp/include/vehicle_model_gggv_sim_validation_cpp/: validation_model.hpp
src/vehicle_model_gggv_sim_validation_cpp/src/: validation_model.cpp
src/vehicle_models_gggv_sim_py/vehicle_models_gggv_sim_py/: __init__.py
vehicle_model/OpenCarDynamics/: README.md
vehicle_model/OpenCarDynamics/tum_sim_types_cpp/include/tum_sim_types_cpp/: types.hpp
vehicle_model/param_manager_py/param_manager_py/: __init__.py
vehicle_model/param_manager_py/src/param_manager_py/: _test_binding_ptr.cpp
vehicle_model/tum_sim_types_py/: CMakeLists.txt
vehicle_model/tum_types_py/: package.xml
vehicle_model/tum_types_py/tum_types_py/common/: __init__.py
vehicle_model/vehicle_model_gggv_sim_validation_cpp/include/vehicle_model_gggv_sim_validation_cpp/: helpers.hpp
vehicle_model/vehicle_models_gggv_sim_py/: CMakeLists.txt  package.xml
vehicle_model/vehicle_models_gggv_sim_py/src/vehicle_models_gggv_sim_py/: _cpp_binding.cpp
