<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tum_sim_types_py</name>
  <version>1.0.0</version>
  <description>Python Binding for tum_sim_types_cpp</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache License 2.0</license>
  <author email="simon.sagmeister@tum.de">Simon Sagmeister</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>pybind11_vendor</depend>

  <!-- Content dependencies -->
  <depend>tum_types_cpp</depend>
  <depend>tum_sim_types_cpp</depend>
  <exec_depend>tum_types_py</exec_depend>
  <exec_depend>param_manager_py</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
