<?xml version="1.0"?>
<package format="3">
  <name>vehicle_model_gggv_sim_validation_cpp</name>
  <version>1.0.0</version>
  <description>A vehicle model used for validating the gggv simulation generation</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>vehicle_model_base_cpp</depend>
  <depend>param_manager_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
